<resources>
    <string name="app_name">skateboard group</string>
    <string name="app_name_skateboard">skateboard group</string>
    <string name="app_name_packour">packour group</string>
    <string name="app_name_bmx">BMX GROUP</string>
    <string name="app_name_roller_skating">skating group</string>
    <string name="app_name_skee">skee group</string>

    <string name="done">done</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="back">back</string>
    <string name="err">error</string>
    <string name="success">success</string>
    <string name="unknown">Unknown</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="updating">updating</string>
    <string name="wait">wait</string>
    <string name="wait_location">location...</string>
    <string name="location_failed">location failed</string>
    <string name="loading">loading</string>
    <string name="please_enter">please enter </string>
    <string name="please_select">select</string>
    <string name="please_select_picture">please select picture</string>
    <string name="please_select_address">please select address</string>
    <string name="please_select_hobby">please select sports</string>
    <string name="optional">optional</string>
    <string name="required">required</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">welcome</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="account_name">account/phone</string>
    <string name="logging">logging</string>
    <string name="phone_login">phone login</string>
    <string name="qq_login">QQ Login</string>
    <string name="weixin_login">weixin Login</string>
    <string name="invitation_code">Invitation code</string>
    <string name="inviting">inviting</string>
    <string name="phone_number">phone number</string>
    <string name="verification_code">verification code</string>
    <string name="get_verification_code">get verification code</string>
    <string name="re_acquisition">Re acquisition</string>
    <string name="description">description</string>
    <string name="type">type</string>
    <string name="paste_url_here">paste the URL here</string>
    <string name="paste_weixin_url_tips">可以将微信中相关的订阅号资讯分享到此处，点击微信页面右上角-复制链接，然后粘贴过来！</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="select_address">select address</string>
    <string name="score">score</string>
    <string name="series_skateboard">SKATEBOARD</string>
    <string name="series_longboard">LONGBOARD</string>
    <string name="series_fish">FISH</string>

    <string name="not_more">not more</string>

    <string name="topic">topic</string>
    <string name="discovery">discovery</string>
    <string name="mine">mine</string>

    <string name="mood">mood</string>
    <string name="short_video">short video</string>
    <string name="news">news</string>
    <string name="discuss">discuss</string>
    <string name="s_video">short video</string>
    <string name="video">video</string>
    <string name="activity">activity</string>
    <string name="course">course</string>
    <string name="challenge">challenge</string>
    <string name="site">site</string>
    <string name="community">community</string>
    <string name="people">near friend</string>
    <string name="ranking_list">ranking list</string>
    <string name="store">store</string>
    <string name="contribute">contribute</string>

    <!--create-->
    <string name="please_install_file_browser">please install file browser</string>
    <string name="please_select_mp4_file">please select mp4 file</string>
    <string name="video_is_empty">please select video</string>
    <string name="title_is_empty">please write title</string>
    <string name="url_is_empty">please enter URL</string>
    <string name="please_upload_your_xx_video">please upload your %1$s video</string>

    <string name="reply_of_me">respond</string>
    <string name="collection">collection</string>
    <string name="offline_video">download</string>
    <string name="agree_of_me">agree</string>
    <string name="setting">setting</string>
    <string name="sponsorship">sponsorship</string>
    <string name="invite">invite</string>
    <string name="point_store">point store</string>

    <string name="topic_detail">topic detail</string>
    <string name="course_detail">course detail</string>
    <string name="floor">f</string>
    <string name="reply">reply</string>
    <string name="view">view</string>
    <string name="we_speek">i speek</string>
    <string name="want_speek">wang speek</string>
    <string name="send">send</string>
    <string name="send_message">message</string>
    <string name="title">title</string>
    <string name="submit">submit</string>
    <string name="submit_2">submit</string>
    <string name="edit">edit</string>
    <string name="expression">express</string>
    <string name="image">image</string>
    <string name="reply_success">reply success</string>
    <string name="add_topic_success">submit topic success</string>
    <string name="load_sub_reply" formatted="false">load%1$dreply</string>
    <string name="count_score" formatted="false">%1$d marking</string>
    <string name="loadmore">load more</string>

    <string name="edit_profile">edit profile</string>
    <string name="random">random</string>
    <string name="upload">upload</string>
    <string name="select">select</string>
    <string name="local">local</string>
    <string name="nickname">Nickname</string>
    <string name="password">password</string>
    <string name="birth">birth</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="save_profile">save</string>
    <string name="register_success">register success</string>
    <string name="select_avatar">select avatar</string>
    <string name="region">Region</string>
    <string name="signature">Signature</string>
    <string name="delivery_address">delivery address</string>
    <string name="delivery_phone">delivery phone</string>

    <!--course-->
    <string name="upload_my_video">upload this action video</string>

    <!--site-->
    <string name="marking_site">marking site</string>
    <string name="site_create_tips">Let us record the next terrain, so that we can find everyone</string>
    <string name="lat_lng_empty">Latitude and longitude is empty</string>
    <string name="site_des_empty">Please fill in the description</string>
    <string name="site_name_empty">Please fill in the name</string>

    <!--community-->
    <string name="community_type_location">location community</string>
    <string name="community_type_school">school community</string>
    <string name="community_type_shop">skateboard shop</string>
    <string name="community_type_professional">professional</string>

    <!--store-->
    <string name="shopping_cart">shopping cart</string>
    <string name="order">order</string>
    <string name="secondary_market">secondary market</string>

    <!--sponsorship-->
    <string name="month_tycoon_list">month tycoon list</string>
    <string name="donation">donation</string>
    <string name="money_unit">USD</string>

    <!--lottery plan-->
    <string name="lucky_saturday">幸运星期6</string>
    <string name="open_lottery_time_dot">开奖时间:</string>
    <string name="sponsor_dot">赞&#160;&#160;助&#160;&#160;商:</string>

    <string name="logout">logout</string>
    <string name="notify_setting">notify</string>
    <string name="feed_back">feed back</string>
    <string name="clean_cache">clean cache</string>

    //client local error
    <string name="app_version_is_low">client version is too low,please update!</string>

    //my global error
    <string name="err_birth">birht error</string>
    <string name="err_name_empty">nickname is not empty</string>
    <string name="err_name_repeat">nickname is repeat</string>
    <string name="err_phone_number">phone number error</string>
    <string name="err_phone_registered">phone registered</string>
    <string name="err_verification_code">verification code failed</string>
    <string name="err_password_empty">password not empty</string>
    <string name="err_video_not_found">video not found</string>

    
    //network error
    <string name="time_out">Time out</string>
    <string name="network_err">Network error</string>
    <string name="connection_err">Connection error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
