<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    style="@style/activity_root_layout">

    <com.jixianxueyuan.widget.MyActionBar
        android:id="@+id/create_news_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:action_title="@string/contribute"/>

    <LinearLayout
        style="@style/MainContainer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/paste_weixin_url_tips"/>
        <EditText
            android:id="@+id/create_news_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:hint="@string/paste_url_here"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:enabled="false"
            style="@style/BlueButton" />

    </LinearLayout>

</LinearLayout>