<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/primary">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/account_name"
        android:layout_marginTop="120dp"
        style="@style/contentEditText"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:hint="@string/password"
        style="@style/contentEditText"/>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        style="@style/TransparentWhiteButton"/>
</LinearLayout>