<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70FFFFFF">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ad"/>


    <LinearLayout
        android:id="@+id/create_topic_pre_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/create_topic_pre_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/add_close"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/create_topic_pre_bottom_bar"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/create_topic_pre_discuss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/add_discuss"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discuss"
                style="@style/SecondText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/create_topic_pre_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/add_mood"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood"
                style="@style/SecondText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/create_topic_pre_short_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/add_video"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_video"
                style="@style/SecondText"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>